Separate panels into tabs
